# Time-Series-Forecasting-for-Load-Solar-Generation-Python-ML

./: .gitignore  README.md  docker-compose.yml  energy_forecasting.py  pyproject.toml  requirements.txt
configs/: baseline.yaml
dashboard/: .env.example  Dockerfile  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/api/forecast/: route.ts
python/: Dockerfile  README.md  pyproject.toml  requirements-boosting.txt  requirements-deep-learning.txt  run_experiment.py
python/configs/: enhanced_history.yaml  lstm_time2vec.example.yaml
python/src/energy_forecasting/: __init__.py  api.py  evaluation.py  features.py  layers.py  models.py  neural.py
python/tests/: test_api.py  test_config.py  test_evaluation.py  test_features.py
src/energy_forecasting/: __init__.py  config.py  data.py  experiment.py  features.py  models.py
tests/: test_config.py  test_data.py  test_features.py  test_models.py
