[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-forecasting-baseline"
version = "0.2.0"
description = "Leakage-safe day-ahead load and solar forecasting experiments"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3,<2",
  "matplotlib>=3.7,<4",
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "PyYAML>=6,<7",
  "scikit-learn>=1.3,<2",
]

[project.optional-dependencies]
deep-learning = ["tensorflow>=2.16,<3"]
service = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1"]
boosting = ["xgboost>=2,<4", "lightgbm>=4,<5"]
dev = ["pytest>=8,<10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
